--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,10 @@ test.go
 *.out
 
 # Dependency directories (remove the comment below to include it)
-*.yml
+config.yml
 
 #Database
 *.db
+
+#Logs
+/log
