--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -10,6 +10,11 @@ builds:
     goarch:
       - 386
       - amd64
+      - arm
+      - arm64
+    goarm:
+      - 6
+      - 7
 checksum:
   name_template: '{{ .ProjectName }}_checksums.txt'
 archives:
