--- a/config.yml.example
+++ b/config.yml.example
@@ -2,6 +2,7 @@ bot_token: xxx
 #socks5: 127.0.0.1:1080
 bindmax: 3
 admin: 555,666,777
+goroutine: 10
 errlimit: 5
 notice: "aaa\nbbb"
 cron: "1 */3 * * *"
@@ -12,3 +13,4 @@ mysql:
   user: root
   password: root
   database: e5sub
+  table: users
