--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -29,6 +29,11 @@ archives:
     format_overrides:
       - goos: windows
         format: zip
+    files:
+      - README.md
+      - README_zhCN.md
+      - config.yml.example
+      - LICENSE
 snapshot:
   name_template: "{{ .Tag }}-next"
 changelog:
