--- a/config.yml.example
+++ b/config.yml.example
@@ -1,16 +1,21 @@
-bot_token: xxx
-#socks5: 127.0.0.1:1080
-bindmax: 3
-admin: 555,666,777
-goroutine: 10
-errlimit: 5
-notice: "aaa\nbbb"
-cron: "1 */3 * * *"
-#docker部署默认无需修改mysql配置
-mysql:
-  host: mysql
-  port: 3306
-  user: root
-  password: root
-  database: e5sub
-  table: users
+bot_token: YOUR_BOT_TOKEN
+# socks5: 127.0.0.1:1080
+bindmax: 999
+goroutine: 20
+admin: 111,222,333
+errlimit: 999
+notice: |-
+  aaa
+  bbb
+  ccc
+cron: "1 */1 * * *"
+db: sqlite
+table: users
+# mysql:
+#  host: 127.0.0.1
+#  port: 3306
+#  user: root
+#  password: pwd
+#  database: e5sub
+sqlite:
+  db: data.db
