--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -6,16 +6,28 @@ builds:
       - CGO_ENABLED=0
     ldflags: -s -w
     goos:
-      - linux
-      - windows
+        - linux
+        - windows
+        - darwin
     goarch:
-      - 386
-      - amd64
-      - arm
-      - arm64
+        - 386
+        - amd64
+        - arm
+        - arm64
     goarm:
-      - 6
-      - 7
+        - 6
+        - 7
+    ignore:
+        - goos: windows
+          goarch: 386
+        - goos: windows
+          goarch: arm
+        - goos: windows
+          goarch: arm64
+        - goos: darwin
+          goarch: arm
+        - goos: darwin
+          goarch: 386
 checksum:
   name_template: '{{ .ProjectName }}_checksums.txt'
 archives:
