:sparkles: add `/start` cmd and ui

--- a/template/zh-cn.toml
+++ b/template/zh-cn.toml
@@ -1,2 +1,20 @@
 [button]
 back = "⬅ 回到首页"
+start_bind = "🔒 绑定账号"
+start_unbind = "🔓 解绑账号"
+start_export = "📤 导出账号"
+start_import = "📥 导入账号"
+start_my = "🧑 我的信息"
+start_help = "📖 帮助"
+
+[start]
+desc = """
+✨ 你好！[{{ .Username }}](tg://user?id={{ .ID }}) ✨
+
+*PayInBot 是专注于简化付费入群流程的 Bot*
+
+[GitHub](https://github.com/iyear/E5SubBot) | [Chat](https://t.me/e5subbot)
+
+**公告:** ```{{ .Notice }}```
+👇 点击按钮开始使用 👇
+"""
