:sparkles: add language settings

--- a/template/zh-cn.toml
+++ b/template/zh-cn.toml
@@ -7,6 +7,8 @@ start_import = "📥 导入账号"
 start_my = "🧑 我的信息"
 start_settings = "⚙ 设置"
 
+settings_language = "🌏 语言"
+
 [start]
 desc = """
 ✨ 你好！[{{ .Username }}](tg://user?id={{ .ID }}) ✨
@@ -17,4 +19,12 @@ desc = """
 
 **公告:** ```{{ .Notice }}```
 👇 点击按钮开始使用 👇
+"""
+
+[settings]
+desc = "👇 请选择你的设置项"
+language = """
+🌏 当前语言为: *{{ . }}*
+
+👇 请选择需要设置的语言
 """
